[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/Level0/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameScreens/GameplayScreen/GameplayScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
hinting = 0
font_path = "res://Major_Mono_Display/MajorMonoDisplay-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = SubResource( 1 )

[node name="GameplayScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 49.0

[node name="HealthGUI" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 151.0
margin_bottom = 49.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HealthLabel" type="Label" parent="VBoxContainer/HBoxContainer/HealthGUI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 135.0
margin_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "health : 3"
align = 2
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 568.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="TimeGUI" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 572.0
margin_right = 640.0
margin_bottom = 49.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer/TimeGUI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 52.0
margin_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "NaN"
align = 2
valign = 1
